plugins/proxywasm/e2e/envoy/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "envoy-request-sablier-plugin"
                  root_id: "envoy-request-sablier-plugin"
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                        "sablier_url": "sablier",
                        "cluster": "sablier:10000",
                        "group": "demo",
                        "session_duration": "30s",
                        "dynamic": {
                          "display_dame": "From wasm",
                          "show_details": true,
                          "theme": "hacker-terminal",
                          "refresh_frequency": "5s"
                        }
                      }
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "vm.sablier.envoy-request-sablier-plugin"
                    code:
                      local:
                        filename: "/etc/sablierproxywasm.wasm"
                    configuration: {}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_refresh_rate: 0.01s
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service.cluster.local
                port_value: 80
  - name: sablier
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: sablier
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sablier.cluster.local
                port_value: 10000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
